--- a/Resume.css
+++ b/Resume.css
@@ -6,23 +6,25 @@ body{
 
 .perkenalan{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
     font-weight: 500;
     line-height: 25px;
     color: white;
     text-align: center;
     background-color: rgba(128, 128, 128, 0.555);
-    padding-top: 1px;
+    padding-top: 10px;
     padding-bottom: 1px;
     min-width: 50%;
-    width: 100%;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
     border: 4px solid rgb(119, 15, 15);
     border-radius: 25px;
 }
 
 .datadiri{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
     color: white;
     text-align: center;
     background-color: rgba(185, 70, 70, 0.555);
@@ -30,28 +32,37 @@ body{
     padding-right: 25;
     max-height: 150px;
     height: 127px;
+    width: 75%;
     border: 4px solid rgb(71, 71, 71);
     border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .pengalaman{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
     color: white;
     text-align: center;
     background-color: rgba(185, 70, 70, 0.555);
     border: 4px solid rgb(71, 71, 71);
     border-radius: 25px;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .inspirasi{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
     color: white;
     text-align: center;
     background-color: rgba(128, 128, 128, 0.555);
     border: 4px solid rgb(119, 15, 15);
     border-radius: 25px;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
 
 }
 
@@ -59,13 +70,16 @@ body{
 
 .pendidikan{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
     color: white;
     text-align: center;
     background-color: rgba(128, 128, 128, 0.555);
     padding-bottom: 5px;
     padding-top: 5px;
-    line-height: 25spx;
+    line-height: 15spx;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
     border: 4px solid rgb(119, 15, 15);
     border-radius: 25px;
 }
@@ -73,6 +87,7 @@ body{
 .tabel{
     margin-left: auto;
   margin-right: auto;
+  width: 100%%;
 }
 
 thead{
@@ -95,6 +110,8 @@ tbody{
     display: block;
   margin-left: auto;
   margin-right: auto;
+    
+    
 }
 
 .org{
@@ -133,9 +150,13 @@ ol {
 
 .pisang{
     text-align: center;
+    
 }
 
 .header{
-    margin-left: 32%;
+    margin-left: 40%;
 }
 
+.mpk{
+    text-align: center;
+}
