--- a/Resume.css
+++ b/Resume.css
@@ -79,7 +79,7 @@ body{
     line-height: 15spx;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 100%;
     border: 4px solid rgb(119, 15, 15);
     border-radius: 25px;
 }
@@ -87,7 +87,7 @@ body{
 .tabel{
     margin-left: auto;
   margin-right: auto;
-  width: 100%%;
+  width: 100%;
 }
 
 thead{
@@ -159,4 +159,10 @@ ol {
 
 .mpk{
     text-align: center;
+}
+
+.email{
+    text-align: center;
+    font-size: smaller;
+    margin-left: -5%;
 }
